fix: resolved the css issues with the page

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "autoprefixer": "^10.4.21",
     "mongodb": "^6.15.0",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
